<resources>
    <string name="app_name">VangProject1</string>
    <string name="startButton">new game</string>
    <string name="toggleM">A male</string>
    <string name="toggleF">A Female</string>
    <string name="startButton2">Create new file</string>
    <string name="genderPrompt">I want to play as...</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="loadButton">load game</string>
    <string name="inventory">inventory</string>
    <string name="checkboxText">Use selected item before battle</string>
    <string name="battleButtonText">Battle!</string>
    <string name="placeholdertext">placeholder</string>
    <string name="radioButtonAtk">Attack</string>
    <string name="radiobuttonabiltiy">Ability</string>
    <string name="radiobuttonDefend">Defend</string>
    <string name="fightbuttonText">Act</string>
    <string name="hpbarStartText">HP:</string>
    <string name="namepromptLabelText">My name is...</string>
    <string name="defaultTextEditText" />
    <string name="mpTextView">mp</string>
    <string name="atkTextView">atk</string>
    <string name="defTextView">def</string>
    <string name="volumeTextViewText">Volume:</string>
    <string name="herb">herb</string>
    <string name="hp">hp</string>
    <string name="ATK">ATK:</string>
    <string name="DEF">DEF:</string>
    <string name="HP">HP:</string>
    <string name="MP">MP:</string>
    <string name="classnameText">Class:</string>
    <string name="playerNameText">Name:</string>
    <string name="currentExptext">Current Exp:</string>
    <string name="exptonextlevelText">Exp to next Level:</string>
    <string name="leveltext">Level:</string>
    <string name="volumebarText">Volume:</string>
    <string name="toastUpdateText">updating stats</string>
    <string name="toastSavingData">Saving... please wait.</string>
    <string name="toastYouPicked">You picked:</string>
    <string name="bundleTextName">name</string>
    <string name="genderTextFemal">female</string>
    <string name="genderTextMale">male</string>
    <string name="bundleGenderText">gender</string>
    <string name="bundleSelectedClassText">selectedClass</string>
    <string name="toastYouWin">You win!</string>
    <string name="toastYouLose">You lose.</string>
    <string name="slimeName">slime</string>
    <string name="defaultMonsterImageURL">http://www.woodus.com/den/gallery/graphics/dw7psx/monster/slime.png</string>
    <string name="defaultAbility">NONE</string>
    <string name="toastMonsterAttackText">attacks! Your HP is now:</string>
    <string name="dialogInterfaceDeclineText">Then we will wait until you are ready.</string>
    <string name="yesText">Yes</string>
    <string name="noText">No</string>
    <string name="newGameTextPrompt">Are you sure you want to start a new adventure?  Doing this will delete your save data.</string>
    <string name="toastNoAbility">You don\'t have an ability!</string>
    <string name="toastHeal">You cast heal! Your HP is now:</string>
    <string name="toastMp">Your MP is now:</string>
    <string name="toastBlaze">You cast Blaze! The enemy\'s HP is now:</string>
    <string name="toastDefend">You increase your defense and catch your breath! HP healed to:</string>
</resources>
